finalised MEP extraction renamed

--- a/motor_evoked_potentials_extraction.ipynb
+++ b/motor_evoked_potentials_extraction.ipynb
@@ -96,9 +96,7 @@
     "\n",
     "# adding session dates as a readable string and converting subrec to int\n",
     "mep_sciatic['session_dates'] = mep_sciatic['session'].dt.strftime('%Y-%m-%d_%H-%M-%S')\n",
-    "mep_sciatic['subrec'] = mep_sciatic['subrec'].astype(int)\n",
-    "\n",
-    "mep_sciatic"
+    "mep_sciatic['subrec'] = mep_sciatic['subrec'].astype(int)"
    ],
    "metadata": {
     "collapsed": false,
