published version 1.0.0 on PYPI

--- a/notebooks/simplfied MEP extract.ipynb
+++ b/notebooks/simplfied MEP extract.ipynb
@@ -12,13 +12,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-27T13:20:55.974165Z",
-     "start_time": "2024-07-27T13:20:54.921733Z"
+     "end_time": "2024-07-28T13:12:03.817080Z",
+     "start_time": "2024-07-28T13:12:03.591558Z"
     }
    },
    "source": [
     "from tqdm import tqdm\n",
-    "from mepextract.src import Extractor\n",
+    "from mepextract.extracting import Extractor\n",
     "from scipy.signal import find_peaks\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -42,19 +42,49 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-27T13:20:55.979326Z",
-     "start_time": "2024-07-27T13:20:55.975192Z"
+     "end_time": "2024-07-28T13:27:25.251533Z",
+     "start_time": "2024-07-28T13:27:25.246394Z"
     }
    },
    "cell_type": "code",
    "source": [
     "spreadsheet = pd.read_csv('/Users/fomo/Documents/Research/UNIC Research/Motor Evoked Potentials Test/mep_sciatic.csv')\n",
     "\n",
-    "master_folder = '/Volumes/STORAGE 1.0/UNIC Research/Motor Evoked Potentials/motor_evoked_potentials_dataspell/MEPSSEP_raw_data'"
+    "master_folder = '/Volumes/STORAGE 1.0/UNIC Research/Motor Evoked Potentials/motor_evoked_potentials_dataspell/MEPSSEP_raw_data'\n",
+    "\n",
+    "spreadsheet.loc[0]"
    ],
    "id": "62b0483c58bdf3af",
-   "outputs": [],
-   "execution_count": 2
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index                             37\n",
+       "session          2024-03-02 11:08:17\n",
+       "animalID                        A565\n",
+       "cage                             NaN\n",
+       "ear                              NaN\n",
+       "phenotype                      5XFAD\n",
+       "phenoCode                        2.0\n",
+       "subrec                             1\n",
+       "sessionClass                     MEP\n",
+       "sessionType                  sciatic\n",
+       "currentLevel                    1.68\n",
+       "isoflo                           1.6\n",
+       "stim                             NaN\n",
+       "trials_from                      1.0\n",
+       "trials_to                       60.0\n",
+       "notes                  1 pulse 100us\n",
+       "session_dates    2024-03-02_11-08-17\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
   },
   {
    "metadata": {},
