--- a/notebooks/MEP_analysis.ipynb
+++ b/notebooks/MEP_analysis.ipynb
@@ -12,27 +12,23 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-10T05:16:45.156515Z",
-     "start_time": "2025-03-10T05:16:45.152847Z"
+     "end_time": "2025-06-02T10:00:37.866401Z",
+     "start_time": "2025-06-02T10:00:37.862506Z"
     }
    },
    "source": [
     "from tqdm import tqdm\n",
     "from mepextract.extracting import Extractor\n",
-    "from mepextract.extracting import Viewer\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import scienceplots\n",
-    "import os\n",
     "import pickle\n",
-    "import json\n",
     "\n",
     "plt.style.use(['science', 'grid', 'vibrant'])"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -43,8 +39,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-04T14:45:10.807673Z",
-     "start_time": "2025-03-04T14:45:10.788983Z"
+     "end_time": "2025-04-27T12:31:18.391024Z",
+     "start_time": "2025-04-27T12:31:18.372851Z"
     }
    },
    "cell_type": "code",
@@ -439,8 +435,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T05:16:49.288513Z",
-     "start_time": "2025-03-10T05:16:49.078361Z"
+     "end_time": "2025-06-02T10:00:50.297963Z",
+     "start_time": "2025-06-02T10:00:50.032941Z"
     }
    },
    "cell_type": "code",
@@ -453,13 +449,13 @@
    ],
    "id": "8ae532003d28da8a",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-04T14:45:31.763035Z",
-     "start_time": "2025-03-04T14:45:31.759354Z"
+     "end_time": "2025-06-02T10:00:52.594546Z",
+     "start_time": "2025-06-02T10:00:52.575140Z"
     }
    },
    "cell_type": "code",
@@ -472,12 +468,12 @@
        "dict_keys(['trial', 'notes', 'events', 'data'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -488,8 +484,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T05:17:00.719097Z",
-     "start_time": "2025-03-10T05:17:00.075078Z"
+     "end_time": "2025-06-02T10:00:54.839777Z",
+     "start_time": "2025-06-02T10:00:53.578503Z"
     }
    },
    "cell_type": "code",
@@ -512,7 +508,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "95631679b18a4bc7865b5bfbec05e6fe"
+       "model_id": "c05df008e99d4589989362fe296151d9"
       }
      },
      "metadata": {},
@@ -526,7 +522,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5104ef7d81214ea4aaf0f5d6faea14b8"
+       "model_id": "bd3a07dfc6c646f4a43954a7febe50a6"
       }
      },
      "metadata": {},
@@ -540,7 +536,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1feee29f206e4f42b0c469de7423fc82"
+       "model_id": "2cfd4d82ff8240c7af37a9ce851d7c2d"
       }
      },
      "metadata": {},
@@ -554,7 +550,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e900a30b31c2465f91ab751ed56035fb"
+       "model_id": "f4bc7436e32441058ee4804cf617ca59"
       }
      },
      "metadata": {},
@@ -568,7 +564,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1feee29f206e4f42b0c469de7423fc82"
+       "model_id": "2cfd4d82ff8240c7af37a9ce851d7c2d"
       }
      },
      "metadata": {},
@@ -582,14 +578,14 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "190061f0f2064cc2a9629c93f59395cf"
+       "model_id": "516fd6d5a0b24e44bd58c07d5e36f00b"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 35
+   "execution_count": 8
   },
   {
    "metadata": {
@@ -630,8 +626,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-09T12:55:50.882430Z",
-     "start_time": "2025-03-09T12:55:50.632784Z"
+     "end_time": "2025-06-02T09:59:50.194689Z",
+     "start_time": "2025-06-02T09:59:49.927161Z"
     }
    },
    "cell_type": "code",
@@ -646,8 +642,20 @@
     "    classified_indices = pickle.load(f)"
    ],
    "id": "bec79728d395ddca",
-   "outputs": [],
-   "execution_count": 2
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/Users/fomo/Documents/Research/UNIC Research/Motor Evoked Potentials Test/classified/accepted.pkl\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mrb\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[0;32m----> 2\u001B[0m     accepted \u001B[38;5;241m=\u001B[39m \u001B[43mpickle\u001B[49m\u001B[38;5;241m.\u001B[39mload(f)\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/Users/fomo/Documents/Research/UNIC Research/Motor Evoked Potentials Test/classified/unsure.pkl\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mrb\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[1;32m      5\u001B[0m     unsure \u001B[38;5;241m=\u001B[39m pickle\u001B[38;5;241m.\u001B[39mload(f)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'pickle' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
