minor changes to smooth workflow

--- a/notebooks/MEP_analysis.ipynb
+++ b/notebooks/MEP_analysis.ipynb
@@ -18,7 +18,8 @@
    },
    "source": [
     "from tqdm import tqdm\n",
-    "from mepextract.extracting import Extractor\n",
+    "from openephysextract.extractor import Extractor\n",
+    "from openephysextract.preprocess import Preprocessor\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
