Enhance notebook environment checks

--- a/notebooks/5xFAD-simple-processing.ipynb
+++ b/notebooks/5xFAD-simple-processing.ipynb
@@ -22,10 +22,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import required modules\n",
+    "# Activate conda environment and import required modules\n",
+    "import subprocess\n",
     "import sys\n",
     "import os\n",
     "from pathlib import Path\n",
+    "\n",
+    "# Ensure we're using the spectra conda environment\n",
+    "try:\n",
+    "    # Check if we're already in the right environment\n",
+    "    conda_env = os.environ.get('CONDA_DEFAULT_ENV', 'base')\n",
+    "    if conda_env != 'spectra':\n",
+    "        print(f\"⚠️ Current environment: {conda_env}\")\n",
+    "        print(\"💡 Please activate the 'spectra' environment:\")\n",
+    "        print(\"   conda activate spectra\")\n",
+    "        print(\"   Then restart this notebook\")\n",
+    "    else:\n",
+    "        print(f\"✅ Using conda environment: {conda_env}\")\n",
+    "except:\n",
+    "    print(\"⚠️ Could not detect conda environment\")\n",
     "\n",
     "# Add the modules directory to Python path\n",
     "notebook_dir = Path.cwd()\n",
@@ -35,14 +50,19 @@
     "    modules_dir = notebook_dir / \"modules\"\n",
     "sys.path.insert(0, str(modules_dir))\n",
     "\n",
-    "from openephysextract.extractor import Extractor\n",
-    "from openephysextract.preprocess import (\n",
-    "    Preprocessor, RemoveBadStep, FilterStep, \n",
-    "    DownsampleStep, EpochStep, StandardizeStep\n",
-    ")\n",
-    "from openephysextract.utilities import spreadsheet\n",
-    "\n",
-    "print(\"✅ Imports loaded successfully\")"
+    "# Import openephysextract modules\n",
+    "try:\n",
+    "    from openephysextract.extractor import Extractor\n",
+    "    from openephysextract.preprocess import (\n",
+    "        Preprocessor, RemoveBadStep, FilterStep, \n",
+    "        DownsampleStep, EpochStep, StandardizeStep\n",
+    "    )\n",
+    "    from openephysextract.utilities import spreadsheet\n",
+    "    print(\"✅ Imports loaded successfully\")\n",
+    "except ImportError as e:\n",
+    "    print(f\"❌ Import error: {e}\")\n",
+    "    print(\"💡 Make sure you're in the 'spectra' conda environment\")\n",
+    "    print(\"   conda activate spectra\")"
    ]
   },
   {
