Refactor code structure for improved readability and maintainability

--- a/projects/5xFAD/5xFAD-resting-state-extracation.ipynb
+++ b/projects/5xFAD/5xFAD-resting-state-extracation.ipynb
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "b54aa784",
    "metadata": {},
    "outputs": [
@@ -657,11 +657,11 @@
      "output_type": "stream",
      "text": [
       "Available session files: ['2023-09-06_17-32-01.h5', '2023-08-25_23-24-25.h5', '2023-09-06_15-06-20.h5', '2023-08-26_00-12-57.h5', '2023-08-25_15-32-14.h5', '2023-08-26_00-58-14.h5', '2023-08-25_20-33-11.h5', '2023-08-25_17-48-53.h5', '2023-08-25_16-48-03.h5', '2023-09-06_19-26-36.h5', '2023-08-26_01-43-12.h5', '2023-08-25_14-20-15.h5', '2023-08-25_21-35-02.h5', '2023-08-25_22-02-17.h5', '2023-08-25_18-47-30.h5', '2023-08-25_19-39-21.h5', '2023-08-26_02-33-36.h5']\n",
-      "Loaded session: 2023-09-06_15-06-20\n",
-      "Data shape: (3149, 5, 100)\n",
+      "Loaded session: 2023-08-26_00-58-14\n",
+      "Data shape: (3193, 5, 100)\n",
       "Available attributes: ['add_notes', 'annotate', 'bad_ics', 'ch_names', 'data', 'duration', 'events', 'experiment', 'from_dict', 'from_hdf5', 'good_channels', 'group', 'history', 'ica_model', 'ica_sources', 'load', 'location', 'log_step', 'montage', 'notes', 'original_channels', 'preprocessed', 'raw', 'sampling_rate', 'save', 'schema_version', 'session', 'shape', 'states', 'stats', 'times', 'to_dict', 'to_hdf5']\n",
       "Good channels: [0, 1, 2, 3, 4]\n",
-      "Stats: {'remove_bad': {'before': 6, 'after': 5, 'removed': 1}, 'filter': {'lowcut': 0.1, 'highcut': 80, 'order': 4, 'notch_freqs': [], 'detrend': False}, 'downsample': {'factor': 300, 'orig_fs': 30000, 'new_fs': 100}, 'epoch': {'n_epochs': 3149, 'frame': 100, 'stride': 10}, 'standardize': {'method': 'zscore', 'per_epoch': True, 'preprocessed': [5, 31583], 'data': [3149, 5, 100]}}\n",
+      "Stats: {'remove_bad': {'before': 6, 'after': 5, 'removed': 1}, 'filter': {'lowcut': 0.1, 'highcut': 80, 'order': 4, 'notch_freqs': [], 'detrend': False}, 'downsample': {'factor': 300, 'orig_fs': 30000, 'new_fs': 100}, 'epoch': {'n_epochs': 3193, 'frame': 100, 'stride': 10}, 'standardize': {'method': 'zscore', 'per_epoch': True, 'preprocessed': [5, 32024], 'data': [3193, 5, 100]}}\n",
       "History length: 5\n"
      ]
     }
@@ -679,7 +679,7 @@
     "\n",
     "# Load the first session as an example\n",
     "if session_files:\n",
-    "    session_path = os.path.join(\"5xFAD-resting-state-preprocessed\", session_files[2])\n",
+    "    session_path = os.path.join(\"5xFAD-resting-state-preprocessed\", session_files[5])\n",
     "    loaded_session = Session.from_hdf5(session_path)\n",
     "    print(f\"Loaded session: {loaded_session.session}\")\n",
     "    print(f\"Data shape: {loaded_session.data.shape}\")\n",
@@ -708,10 +708,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "30633add",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HDF5 file attributes:\n",
+      "  ch_names: []\n",
+      "  experiment: 5xFAD Resting State\n",
+      "  good_channels: [0, 1, 2, 3, 4]\n",
+      "    → parsed: [0, 1, 2, 3, 4]\n",
+      "  group: WT\n",
+      "  history: [{\"step\": \"RemoveBadStep\", \"params\": {\"std\": true, \"alpha\": 0.5, \"beta\": 0.5, \"cutoff\": 90, \"verbose\": false}, \"time\": \"2025-08-02T14:56:56.502877\"}, {\"step\": \"FilterStep\", \"params\": {\"lowcut\": 0.1, \"highcut\": 80, \"order\": 4, \"notch_freqs\": [], \"detrend\": false, \"verbose\": false}, \"time\": \"2025-08-02T14:56:57.979584\"}, {\"step\": \"DownsampleStep\", \"params\": {\"target_fs\": 100, \"downsample_raw\": true, \"verbose\": false}, \"time\": \"2025-08-02T14:57:00.182022\"}, {\"step\": \"EpochStep\", \"params\": {\"frame\": 100, \"stride\": 10, \"baseline_ms\": 0, \"verbose\": false}, \"time\": \"2025-08-02T14:57:00.209392\"}, {\"step\": \"StandardizeStep\", \"params\": {\"method\": \"zscore\", \"per_epoch\": true, \"verbose\": false}, \"time\": \"2025-08-02T14:57:00.233851\"}]\n",
+      "  location: /Volumes/STORAGE 1.0/UNIC Research/5xFAD Resting State/2023-08-25_15-32-14\n",
+      "  notes: {\"schema_version\": 1, \"AnimalID\": \"33C7\", \"SessionClass\": NaN, \"SessionType\": NaN, \"currentLevel\": NaN, \"isoflo\": NaN, \"messages\": \"33C7 baseline baseline done\", \"subrecidx\": 1, \"subrec1\": NaN, \"subrec2\": NaN, \"group\": \"WT\"}\n",
+      "  sampling_rate: 100\n",
+      "  session: 2023-08-25_15-32-14\n",
+      "  stats: {\"remove_bad\": {\"before\": 6, \"after\": 5, \"removed\": 1}, \"filter\": {\"lowcut\": 0.1, \"highcut\": 80, \"order\": 4, \"notch_freqs\": [], \"detrend\": false}, \"downsample\": {\"factor\": 300, \"orig_fs\": 30000, \"new_fs\": 100}, \"epoch\": {\"n_epochs\": 3192, \"frame\": 100, \"stride\": 10}, \"standardize\": {\"method\": \"zscore\", \"per_epoch\": true, \"preprocessed\": [5, 32014], \"data\": [3192, 5, 100]}}\n",
+      "\n",
+      "Data shapes:\n",
+      "  data: (3192, 5, 100)\n",
+      "  preprocessed: (5, 32014)\n",
+      "  raw: (6, 32014)\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the index conversion by examining the HDF5 file directly\n",
     "import h5py\n",
